Fix minor mobile layout bugs

--- a/assets/style/pages/_404.scss
+++ b/assets/style/pages/_404.scss
@@ -4,3 +4,14 @@
     place-items: center;
     text-align: center;
 }
+
+
+.hero-text-404 {
+    line-height: 1.4;
+    font-weight: bolder;
+    text-transform: uppercase;
+    letter-spacing: 1rem;
+    text-shadow: 1px 1px 2px var(--theme-color);
+    font-size: 3rem;
+    color: var(--theme-color);
+}
