--- a/assets/style/pages/_single.scss
+++ b/assets/style/pages/_single.scss
@@ -34,7 +34,7 @@
     margin-bottom: 0.7em;
     font-size: 4rem;
     line-height: 1.1;
-    margin-top: 9rem;
+    margin-top: 11rem;
 }
 
 .page-wrapper p:has(img) {
