--- a/assets/style/partials/_homepage-hero.scss
+++ b/assets/style/partials/_homepage-hero.scss
@@ -68,7 +68,7 @@ section.hero {
     
 
     h1 {
-        margin: 2.5em 0 1em 0;
+        margin: 4em 0 1em 0;
         line-height: 1.1;
     }
     
