--- a/assets/style/partials/_page-main.scss
+++ b/assets/style/partials/_page-main.scss
@@ -6,7 +6,7 @@
     padding-right: 15px;
 
     h1 {
-        margin-top: 2em;
+        margin-top: 3em;
         font-size: 4rem;
         line-height: 1.1;
         color: var(--headline);
